--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
+[build]
+  command = "jekyll build"
+  publish = "_site"
+
+[build.environment]
+  RUBY_VERSION = "3.2.2"
+  JEKYLL_ENV = "production"
+
 [context.production.environment]
   JEKYLL_ENV = "production"
 
